// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 eZQQaE"
      role="button"
    >
      Option A
    </span>
    <label
      class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-1 utRNX"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-3 fnHdfL"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 OMZuZ"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 ePGhWU"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <label
      class="Toggle__Wrapper-sc-6s3wfu-0 crAizE"
      disabled=""
    >
      <input
        class="Toggle__Input-sc-6s3wfu-1 utRNX"
        disabled=""
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-3 jCMKNe"
          disabled=""
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 dCLirF"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 dHvvEP"
      role="button"
    >
      Option A
    </span>
    <label
      class="Toggle__Wrapper-sc-6s3wfu-0 kIsRpT"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-1 utRNX"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-2 cAxMdF"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-3 fnHdfL"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 fRJBgu"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="Switch__SwitchText-sc-161iiro-0 faOaTv"
      role="button"
    >
      Option A
    </span>
    <label
      class="Toggle__Wrapper-sc-6s3wfu-0 emWhNO"
    >
      <input
        class="Toggle__Input-sc-6s3wfu-1 utRNX"
        type="checkbox"
      />
      <div
        class="Toggle__Handle-sc-6s3wfu-2 giHppe"
      >
        <span
          class="Toggle__HandleInner-sc-6s3wfu-3 gKIbRT"
        />
      </div>
    </label>
    <span
      class="Switch__SwitchText-sc-161iiro-0 bBuInq"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
